--- a/_includes/components.footer.html
+++ b/_includes/components.footer.html
@@ -1,8 +1,8 @@
-<footer class="c-row c-row--beta">
+<footer class="c-row">
     <div class="o-container">
         <div class="o-grid">
             <div class="o-grid__item">
-                <p>Copyright MMXV Chopstick</p>
+                <p>&copy; {{ 'now' | date: "%Y" }} Klimop</p>
             </div>
         </div>
     </div>
