--- a/_includes/components.header.html
+++ b/_includes/components.header.html
@@ -1,11 +1,8 @@
-<div class="js-nav-holder c-row c-row--alpha">
+<div class="js-nav-holder c-row c-row--header">
     <div class="o-container">
-        <div class="o-grid">
-            <div class="o-grid__item">
-                {% include components.logo.html %}
-
-                {% include components.nav-main.html %}
-            </div>
+        <div class="c-header">
+            {% include components.logo.html %}
+            {% include components.nav-main.html %}
         </div>
     </div>
 </div>
