--- a/_includes/trumps.colors.html
+++ b/_includes/trumps.colors.html
@@ -1,69 +1,51 @@
 <!-- Text colors -->
-<div class="o-grid o-grid--gutter">
-    <div class="o-grid__item">
-        <h3>Greyscale colors</h3>
+<h3>Greyscale colors</h3>
+<div class="o-grid">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
+        <div class="c-swatch u-bgcolor-neutral-xx-light"></div>
     </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
+        <div class="c-swatch u-bgcolor-neutral-x-light"></div>
+    </div>
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-neutral-light"></div>
-        <p class="c-swatch-caption">palette(color-neutral,light)</p>
     </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-neutral-base"></div>
-        <p class="c-swatch-caption">palette(color-neutral,base)</p>
     </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-neutral-dark"></div>
-        <p class="c-swatch-caption">palette(color-neutral,dark)</p>
     </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-neutral-x-dark"></div>
-        <p class="c-swatch-caption">palette(color-neutral,x-dark)</p>
+    </div>
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
+        <div class="c-swatch u-bgcolor-neutral-xx-dark"></div>
     </div>
 </div>
 <!-- End text colors -->
 
 <!-- UI colors -->
-<div class="o-grid o-grid--gutter">
-    <div class="o-grid__item">
-        <h3>UI colors</h3>
-    </div>
-
-
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
-        <div class="c-swatch u-bgcolor-alpha-light"></div>
-        <p class="c-swatch-caption">palette(color-alpha,light)</p>
-    </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+<h3>UI colors</h3>
+<div class="o-grid">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-alpha-base"></div>
-        <p class="c-swatch-caption">palette(color-alpha,base)</p>
     </div>
-
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-alpha-dark"></div>
-        <p class="c-swatch-caption">palette(color-alpha,dark)</p>
     </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
         <div class="c-swatch u-bgcolor-alpha-x-dark"></div>
-        <p class="c-swatch-caption">palette(color-alpha,x-dark)</p>
-    </div>
-
-
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
-        <div class="c-swatch u-bgcolor-beta-light"></div>
-        <p class="c-swatch-caption">palette(color-beta,light)</p>
-    </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
-        <div class="c-swatch u-bgcolor-beta-base"></div>
-        <p class="c-swatch-caption">palette(color-beta,base)</p>
-    </div>
-
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
-        <div class="c-swatch u-bgcolor-beta-dark"></div>
-        <p class="c-swatch-caption">palette(color-beta,dark)</p>
-    </div>
-    <div class="o-grid__item u-1-of-2-bp2 u-1-of-4-bp4">
-        <div class="c-swatch u-bgcolor-beta-x-dark"></div>
-        <p class="c-swatch-caption">palette(color-beta,x-dark)</p>
     </div>
 </div>
-<!-- End UI colors -->
+<div class="o-grid">
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
+        <div class="c-swatch u-bgcolor-gamma-base"></div>
+    </div>
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
+        <div class="c-swatch u-bgcolor-beta-base"></div>
+    </div>
+    <div class="o-grid__item u-1-of-2-bp2 u-1-of-8-bp4">
+        <div class="c-swatch u-bgcolor-alpha-dark"></div>
+    </div>
+</div>
