--- a/scss/_shame.scss
+++ b/scss/_shame.scss
@@ -3,3 +3,63 @@
     ---
     Hacks and quick fixes
 */
+
+.o-container {
+    position: relative;
+    width: 100%;
+}
+
+.c-intro {
+    background-color: palette(color-neutral,xxx-dark);
+    min-height: calc(100vh - 5.5rem);
+    display: flex;
+    flex-wrap: wrap;
+    //flex-direction: column;
+    align-items: center;
+    //justify-content: center;
+}
+
+    .c-intro__content {
+        max-width: 42em;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .c-intro__title {
+        color: palette(color-alpha);
+    }
+
+    .c-intro__more {
+        //position: relative;
+        position: absolute;
+        bottom: 0;
+        //left: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        //font-weight: $gamma-font-weight;
+        //text-transform: uppercase;
+        //letter-spacing: 1px;
+        //color: palette(color-beta);
+        color: palette(color-beta,light);
+        color: palette(color-neutral,xxx-light);
+        //@include ms-1;
+        max-width: $grid-max-width ;
+        //margin: auto auto 0 auto;
+        width: 100%;
+        text-align: center;
+        margin-bottom: 0;
+        @include padding-bottom($alpha-leading * 2);
+
+        &:after {
+            content: '';
+            display: block;
+            width: 1px;
+            background-color: #fff;
+            height: $alpha-leading * 1rem;
+            position: absolute;
+            bottom: 0;
+            //left: 0;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
