--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,15 @@
 <body class="c-page">
 
     {% include components.browser-alert.html %}
-
+    {% comment %}
     <div class="c-page-header">
         {% include components.header.html %}
+    </div>
+    {% endcomment %}
+    <div class="c-page-top-cta">
+        <a href="#!" class="c-button c-button--md c-button--gamma c-button--round">
+            Opendeurdag 2017
+        </a>
     </div>
 
     <div class="c-page-main">
