--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,16 +10,19 @@
     <div class="c-page-header">
         {% include components.header.html %}
     </div>
-    {% endcomment %}
+
     <div class="c-page-top-cta">
         <a href="#!" class="c-button c-button--md c-button--gamma c-button--round">
             Opendeurdag 2017
         </a>
     </div>
+    {% endcomment %}
 
     <div class="c-page-main">
         {{ content }}
+        {% comment %}
         {% include components.footer.html %}
+        {% endcomment %}
     </div>
 
     {% include generic.javascript.html %}
