--- a/_includes/components.header.html
+++ b/_includes/components.header.html
@@ -2,7 +2,9 @@
     <div class="o-container">
         <div class="c-header">
             {% include components.logo.html %}
+            {% comment %}
             {% include components.nav-main.html %}
+            {% endcomment %}
         </div>
     </div>
 </div>
