--- a/scss/_components.page.scss
+++ b/scss/_components.page.scss
@@ -9,14 +9,22 @@
 }
 
 .c-page-header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    //bottom: 0;
-    left: 0;
-    background-color: rgba(white,.975);
-    box-shadow: 0 0 50px rgba(palette(color-neutral,xxx-dark),.125);
+    //position: absolute;
+    //top: 0;
+    //right: 0;
+    ////bottom: 0;
+    //left: 0;
+    //background-color: rgba(white,.975);
+    //box-shadow: 0 0 50px rgba(palette(color-neutral,xxx-dark),.125);
     z-index: 2;
+
+    //@include mq(bp3) {
+    //    position: absolute;
+    //    top: 0;
+    //    right: 0;
+    //    //bottom: 0;
+    //    left: 0;
+    //}
 }
 
 .c-page-main {
@@ -34,7 +42,7 @@
     @include padding-tb($alpha-leading,0);
     @include padding-lr($columns-gutter,$columns-gutter);
 
-    .c-button {
-        box-shadow: 0 5px 15px rgba(palette(color-neutral,xxx-dark),.25);
-    }
+    //.c-button {
+    //    box-shadow: 0 5px 15px rgba(palette(color-neutral,xxx-dark),.25);
+    //}
 }
