--- a/scss/_shame.scss
+++ b/scss/_shame.scss
@@ -10,68 +10,41 @@
 }
 
 .c-intro {
-    background-color: palette(color-neutral,xxx-dark);
-    //box-shadow: 0 0 20px rgba(palette(color-neutral,xxx-dark),.25);
-    //background-color: palette(color-alpha,dark);
-    //min-height: calc(100vh - 5.5rem);
-    min-height: calc(100vh - 3rem);
-    //min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    //flex-direction: column;
     align-items: center;
-    //justify-content: center;
     z-index: 20;
+
+    @include mq(bp3) {
+        min-height: calc(80vh - #{$alpha-leading * 5rem});
+    }
 }
 
     .c-intro__content {
         max-width: 42em;
-        margin: 0 auto;
-        text-align: center;
     }
 
     .c-intro__title {
-        color: palette(color-alpha);
+        color: palette(color-alpha,dark);
     }
 
     .c-intro__more {
-        //position: relative;
         position: absolute;
         bottom: $alpha-leading * 1rem;
-        //left: 0;
         left: 50%;
         transform: translateX(-50%);
-        //font-weight: $gamma-font-weight;
-        //text-transform: uppercase;
-        //letter-spacing: 1px;
-        //color: palette(color-beta);
-        //color: palette(color-beta,light);
         color: palette(color-neutral,xxx-light);
-        //color: palette(color-alpha,dark);
-        //@include ms-1;
         max-width: $grid-max-width ;
-        //margin: auto auto 0 auto;
-        //width: 100%;
         text-align: center;
         margin-bottom: 0;
-        //border: 1px solid currentColor;
-        //background-color: #fff;
-        //border-width: 0 0 1px ;
-        //border-radius: 3rem;
-        //@include padding-lr($columns-gutter);
-        //@include padding-tb($alpha-leading,$alpha-leading);
-        //@include padding-bottom($alpha-leading * 2);
 
         &:after {
-            //content: '';
             display: block;
             width: 1px;
             background-color: #fff;
             height: $alpha-leading * 1.5rem;
             position: absolute;
-            //bottom: calc(#{$alpha-leading * -1.5rem} - 1px);
             bottom: $alpha-leading * -1.5rem;
-            //left: 0;
             left: 50%;
             transform: translateX(-50%);
         }
@@ -81,48 +54,34 @@
 
 .c-timeline {
     position: relative;
-    //@include padding-tb($alpha-leading,0);
-
-    //&:before {
-    //    content: '';
-    //    display: block;
-    //    width: 3px;
-    //    position: absolute;
-    //    //background-color: rgba(palette(color-neutral,xxx-dark),.1);
-    //    background-color: rgba(white,.15);
-    //    top: 10px;
-    //    bottom: 10px;
-    //    left: 50%;
-    //    transform: translateX(-50%);
-    //}
-
-    //@include mq(bp3) {
-    //    @include padding-tb($alpha-leading * 4,$alpha-leading * 3);
-    //}
-
-    //@include mq(bp4) {
-    //    @include margin-lr(-($columns-gutter),-($columns-gutter));
-    //}
-
-    //@include mq(bp6) {
-    //    @include padding-tb($alpha-leading * 6,$alpha-leading * 5);
-    //}
 }
+
+    .c-timeline__intro {
+        @include mq(bp4) {
+            position: absolute;
+            max-width: 40%;
+            top: -1rem;
+            left: 0;
+        }
+    }
 
     .c-timeline__item {
         position: relative;
+        @include padding-bottom($alpha-leading);
 
         &:before {
             content: '';
             display: block;
             width: 1px;
             position: absolute;
-            //background-color: rgba(palette(color-neutral,xxx-dark),.1);
-            background-color: rgba(white,.25);
+            background-color: rgba(palette(color-neutral,xxx-dark),.1);
             top: 0;
             bottom: 0;
-            left: 50%;
-            transform: translateX(-50%);
+
+            @include mq(bp4) {
+                left: 50%;
+                transform: translateX(-50%);
+            }
         }
 
         &:first-of-type {
@@ -132,23 +91,18 @@
         }
 
         &:last-of-type {
+            padding-bottom: 0;
+
             &:before {
                 //top: 10px;
                 bottom: auto;
-                height: 50px;
+                height: 40px;
             }
         }
 
 
         @include mq(bp4) {
             display: flex;
-            //align-content: flex-start;
-            //width: 50%;
-            //@include padding-lr($columns-gutter);
-
-            //&:nth-child(even) {
-            //    flex-direction: row-reverse;
-            //}
 
             & + & {
                 @include padding-top($alpha-leading);
@@ -159,12 +113,6 @@
     .c-timeline__title {
         color: rgba(palette(color-neutral,xxx-dark),.95);
         @include text-dimensions($ms1,1);
-
-        //@include mq(bp4) {
-        //    .c-timeline__item:nth-child(even) & {
-        //        text-align: right;
-        //    }
-        //}
     }
 
     .c-timeline__time {
@@ -172,10 +120,9 @@
         align-items: center;
         align-self: flex-start;
         position: relative;
-        text-align: right;
-        justify-content: flex-end;
-        //color: palette(color-neutral);
         color: rgba(palette(color-neutral,xxx-dark),.5);
+        margin-bottom: 0;
+        @include padding-lr($columns-gutter);
         @include text-dimensions($ms-1,1);
 
         &:before {
@@ -186,42 +133,143 @@
             height: 14px;
             border-radius: 20px;
             border: 3px solid palette(color-neutral,xxx-light);
-            //border: 3px solid palette(color-alpha);
             background-color: palette(color-gamma);
-            //box-shadow: 0 0 6px rgba(palette(color-neutral,xxx-dark),.15);
-            box-shadow: 0 0 0 3px palette(color-alpha,dark);
-
-            right: -7px;
+            box-shadow: 0 0 0 1px rgba(palette(color-neutral,xxx-dark),.15), 0 0 6px rgba(palette(color-neutral,xxx-dark),.15);
+            left: -7px;
         }
 
         @include mq(bp4) {
             width: 50%;
+            text-align: right;
+            justify-content: flex-end;
             @include padding-lr($columns-gutter);
 
-            //.c-timeline__item:nth-child(odd) & {
-            //    flex-direction: row-reverse;
-            //
-            //    &:before {
-            //        right: -7px;
-            //    }
-            //}
-
-            //.c-timeline__item:nth-child(even) & {
-            //    &:before {
-            //        left: -7px;
-            //    }
-            //}
+            &:before {
+                left: auto;
+                right: -7px;
+            }
         }
     }
 
     .c-timeline__body {
-        width: 50%;
         color: rgba(palette(color-neutral,xxx-dark),.75);
         @include padding-lr($columns-gutter);
 
-        //@include mq(bp4) {
-        //    .c-timeline__item:nth-child(even) & {
-        //        text-align: right;
-        //    }
-        //}
+        @include mq(bp4) {
+            width: 50%;
+        }
     }
+
+$picture-gutter: 5px;
+
+.c-pictures {
+    position: relative;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    //justify-content: center;
+    //@include margin-bottom($alpha-leading);
+}
+
+.c-picture {
+    position: relative;
+    width: 100%;
+    //height: 0;
+    //box-shadow: 0 5px 50px rgba(palette(color-neutral,xxx-dark),.25);
+    //box-shadow: inset 0 0 0 10px white;
+    background-color: palette(color-neutral,xxx-light);
+    background-position: 50%;
+    background-size: cover;
+    opacity: 0;
+    transform: translateY(50px);
+    //transition: opacity transform $animation-duration-gamma $animation-easing-alpha;
+
+    &.is-loaded {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.c-picture__ratio {
+    height: 0;
+    overflow: hidden;
+
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border: 0px solid white;
+    }
+}
+
+.c-picture__ratio--portrait {
+    padding-bottom: 132%;
+}
+
+.c-picture__ratio--landscape {
+    padding-bottom: 66%;
+}
+
+.c-pictures--first {
+    justify-content: flex-end;
+
+    .c-picture:nth-child(1) {
+        width: 50%;
+        z-index: 10;
+        top: 25px;
+
+        @include mq(bp3) {
+            top: 100px;
+        }
+    }
+
+    .c-picture:nth-child(2) {
+        width: 50%;
+        z-index: 20;
+
+        .c-picture__ratio:after {
+            border-width: 0 0 0 $picture-gutter;
+        }
+    }
+
+    .c-picture:nth-child(3) {
+        width: 70%;
+        z-index: 50;
+
+        .c-picture__ratio:after {
+            border-width: $picture-gutter 0 0 $picture-gutter;
+        }
+    }
+}
+
+.c-pictures--second {
+    //justify-content: flex-end;
+    justify-content: center;
+
+    .c-picture:nth-child(1) {
+        width: 70%;
+        z-index: 10;
+    }
+
+    .c-picture:nth-child(2) {
+        width: 40%;
+        z-index: 20;
+        margin-top: -100px;
+
+        .c-picture__ratio:after {
+            border-width: $picture-gutter $picture-gutter 0 0;
+        }
+    }
+
+    .c-picture:nth-child(3) {
+        width: 60%;
+        z-index: 50;
+
+        .c-picture__ratio:after {
+            border-width: $picture-gutter 0 0 0;
+        }
+    }
+}
