design updates and responsive images

--- a/_includes/components.logo.html
+++ b/_includes/components.logo.html
@@ -1,8 +1,8 @@
 {% if page.section != 'home' %}
-    <p class="c-logo c-logo--neg">
+    <p class="c-logo">
         <a href="index.html" class="c-logo__link">
 {% else %}
-    <h1 class="c-logo c-logo--neg">
+    <h1 class="c-logo">
 {% endif %}
     <svg class="c-logo__svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 134 40">
       <title>{{ site.title }}</title>
