--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,18 @@
 {% include generic.head.html %}
 
 <body class="c-page">
-
-    {% include components.browser-alert.html %}
     {% comment %}
+    {% include components.browser-alert.html %}
     <div class="c-page-header">
         {% include components.header.html %}
     </div>
+    {% endcomment %}
 
     <div class="c-page-top-cta">
-        <a href="#!" class="c-button c-button--md c-button--gamma c-button--round">
+        <a href="#!" class="c-button c-button--md c-button--gamma">
             Opendeurdag 2017
         </a>
     </div>
-    {% endcomment %}
 
     <div class="c-page-main">
         {{ content }}
