--- a/scss/_components.buttons.scss
+++ b/scss/_components.buttons.scss
@@ -35,6 +35,7 @@
     line-height: normal;
     appearance: none;
     box-shadow: none;
+    font-weight: $gamma-font-weight;
     -webkit-font-smoothing: antialiased; /* [4] */
     -moz-osx-font-smoothing: grayscale; /* [4] */
 
