--- a/scss/_settings.default.scss
+++ b/scss/_settings.default.scss
@@ -70,7 +70,7 @@ $palettes: (
         light                       : hsl(hue($color-alpha),saturation($color-alpha),lightness($color-alpha)+20),
         base                        : $color-alpha,
         dark                        : hsl(hue($color-alpha),saturation($color-alpha),lightness($color-alpha)-20),
-        x-dark                      : hsl(hue($color-alpha),saturation($color-alpha),lightness($color-alpha)-40)
+        x-dark                      : hsl(hue($color-alpha),saturation($color-alpha),lightness($color-alpha)-30)
     ),
     color-beta: (
         light                       : hsl(hue($color-beta),saturation($color-beta),lightness($color-beta)+20),
@@ -233,7 +233,7 @@ $html-responsive-font-breakpoint    : bp5 !default;
 $html-responsive-font-magnification : 112.5% !default;
 
 $html-background-color              : palette(color-neutral,xxx-light) !default;
-$body-color                         : palette(color-neutral,x-dark) !default;
+$body-color                         : palette(color-neutral,dark) !default;
 
 $body-font-smoothing                : true !default;
 
