--- a/scss/_shame.scss
+++ b/scss/_shame.scss
@@ -4,6 +4,19 @@
     Hacks and quick fixes
 */
 
+body {
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 90vh;
+        width: 100vw;
+        background-color: palette(color-alpha);
+    }
+}
+
 .o-container {
     position: relative;
     width: 100%;
@@ -16,16 +29,22 @@
     z-index: 20;
 
     @include mq(bp3) {
+        min-height: calc(70vh - #{$alpha-leading * 5rem});
+    }
+
+    @include mq(bp4) {
         min-height: calc(80vh - #{$alpha-leading * 5rem});
     }
 }
 
     .c-intro__content {
         max-width: 42em;
+        margin: 0 auto;
     }
 
     .c-intro__title {
-        color: palette(color-alpha,dark);
+        text-align: center;
+        color: palette(color-alpha,x-dark);
     }
 
     .c-intro__more {
@@ -60,8 +79,9 @@
         @include mq(bp4) {
             position: absolute;
             max-width: 40%;
-            top: -1rem;
+            top: -.75rem;
             left: 0;
+            z-index: 2;
         }
     }
 
@@ -168,58 +188,48 @@ $picture-gutter: 5px;
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    //justify-content: center;
-    //@include margin-bottom($alpha-leading);
 }
 
 .c-picture {
     position: relative;
     width: 100%;
-    //height: 0;
-    //box-shadow: 0 5px 50px rgba(palette(color-neutral,xxx-dark),.25);
-    //box-shadow: inset 0 0 0 10px white;
-    background-color: palette(color-neutral,xxx-light);
-    background-position: 50%;
-    background-size: cover;
-    opacity: 0;
-    transform: translateY(50px);
-    //transition: opacity transform $animation-duration-gamma $animation-easing-alpha;
-
-    &.is-loaded {
-        transform: translateY(0);
-        opacity: 1;
-    }
-}
-
-.c-picture__ratio {
-    height: 0;
-    overflow: hidden;
+    background-color: palette(color-neutral,xx-light);
+    box-shadow: 0 0 0 $picture-gutter rgba(palette(color-neutral,xxx-light),1);
 
     &:after {
         content: '';
         display: block;
         position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
         width: 100%;
         height: 100%;
         border: 0px solid white;
     }
 }
 
-.c-picture__ratio--portrait {
-    padding-bottom: 132%;
-}
+    .c-picture__image {
+        width: 100%;
+        max-width: auto;
+        position: relative;
+        opacity: 0;
+        transition: opacity $animation-duration-beta $animation-easing-alpha;
 
-.c-picture__ratio--landscape {
-    padding-bottom: 66%;
-}
+        &.is-loaded {
+            opacity: 1;
+        }
+    }
 
 .c-pictures--first {
-    justify-content: flex-end;
+    justify-content: center;
 
     .c-picture:nth-child(1) {
-        width: 50%;
+        max-width: 45%;
         z-index: 10;
         top: 25px;
+        //transform: rotate(-2deg);
 
         @include mq(bp3) {
             top: 100px;
@@ -227,20 +237,36 @@ $picture-gutter: 5px;
     }
 
     .c-picture:nth-child(2) {
-        width: 50%;
+        max-width: 45%;
         z-index: 20;
+        //left: $picture-gutter;
+        //transform: rotate(1deg);
 
-        .c-picture__ratio:after {
-            border-width: 0 0 0 $picture-gutter;
+        &:after {
+            //padding-left: $picture-gutter;
+            //border-width: 0 0 0 $picture-gutter;
         }
     }
 
     .c-picture:nth-child(3) {
-        width: 70%;
+        max-width: 70%;
         z-index: 50;
+        margin-top: -200px;
+        //transform: rotate(-1deg);
+        //top: $picture-gutter;
 
-        .c-picture__ratio:after {
-            border-width: $picture-gutter 0 0 $picture-gutter;
+        //&:after {
+        //    border-width: $picture-gutter 0 0 $picture-gutter;
+        //}
+
+        @include mq(bp4) {
+            max-width: $grid-max-width;
+            //right: 50px;
+        }
+
+        @include mq(bp5) {
+            //max-width: $grid-max-width;
+            //right: 100px;
         }
     }
 }
@@ -250,26 +276,41 @@ $picture-gutter: 5px;
     justify-content: center;
 
     .c-picture:nth-child(1) {
-        width: 70%;
+        max-width: 55%;
         z-index: 10;
+        top: 100px;
+        right: -10px;
+
+        //@include mq(bp4) {
+        //    max-width: $grid-max-width;
+        //}
     }
 
     .c-picture:nth-child(2) {
-        width: 40%;
+        width: 35%;
         z-index: 20;
-        margin-top: -100px;
+        //margin-top: -200px;
+        //right: -20px;
 
-        .c-picture__ratio:after {
-            border-width: $picture-gutter $picture-gutter 0 0;
-        }
+        //.c-picture__ratio:after {
+            //border-width: $picture-gutter $picture-gutter 0 0;
+        //}
     }
 
     .c-picture:nth-child(3) {
-        width: 60%;
+        width: 55%;
         z-index: 50;
+        left: -20px;
+        margin-top: -200px;
 
-        .c-picture__ratio:after {
-            border-width: $picture-gutter 0 0 0;
-        }
+        //.c-picture__ratio:after {
+            //border-width: $picture-gutter 0 0 0;
+        //}
+    }
+}
+
+.s-content {
+    h3 {
+        color: palette(color-neutral,xxx-dark);
     }
 }
